# form-ocr-v2

./: .gitignore
.github/workflows/: backend-docker.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-gpu.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260422_0001_initial_tables.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/alignment/: __init__.py  aligner.py  anchors.py  geometry.py  matching.py  transform.py
backend/app/api/: __init__.py  deps.py  errors.py  recognitions.py  templates.py
backend/app/extractors/: __init__.py  base.py  checkbox.py  date.py  multiline_text.py  option_select.py  registry.py  signature.py  table.py  text.py
backend/app/models/: __init__.py  orm.py
backend/app/ocr/: __init__.py  base.py  factory.py  paddle.py
backend/app/pdf/: __init__.py  render.py
backend/app/pipeline/: __init__.py  export.py  orchestrator.py
backend/app/schemas/: __init__.py  common.py  recognition.py  template.py
backend/app/storage/: __init__.py  paths.py
backend/app/template/: __init__.py  repository.py  service.py
backend/docker/: entrypoint.sh
docs/: frontend-usage-and-testing-guide.md
docs/superpowers/plans/: 2026-04-22-backend-dockerhub-delivery.md  2026-04-22-form-ocr-backend.md  2026-04-22-form-ocr-frontend.md
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts
frontend/src/api/: http.ts  (+2 more)
(+25 files in other folders)
